--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	
 <li>Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, <b>Tianyi Li</b>, Yunjun Gao. <br/>
 <p>Spatio-Temporal Trajectory Similarity Measures: A Comprehensive Survey and Quantitative Study. </p>
- <p><i>IEEE Transactions on Knowledge and Data Engineering</i> (<i><b>TKDE</b></i>), 2023 (<b>CCF A</b>).</p>
+ <p><i>IEEE Transactions on Knowledge and Data Engineering</i> (<i><b>TKDE</b></i>), 2023 (<b>JCR Q2, CCF A</b>).</p>
 </li>	
 	
 <li>Jiaqi Wang, <b>Tianyi Li*</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
@@ -261,10 +261,10 @@
 <p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022 (<b>CORE A*, CCF A</b>).</p>
 </li>
 
-<!--<li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>-->
-               <!-- <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>-->
-               <!-- <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 (<b>JCR Q1</b>).</p>-->
-          <!--  </li>-->
+<li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>
+                <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>
+                <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 (<b>JCR Q1, CCF B</b>).</p>
+ </li>
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
