--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PhD Students]</p>
         <ul>
-            <li>Conglei Xu (March 2023 to present), Topic: Fairness-aware Graph Neural Networks. (Co-supervisor; Main supervisor: Arijit Khan) </li>
+            <li>Xiushang Wu (Dec. 2023 to present), Topic: Trajectory data cleaning. </li>  <!--(Co-supervise with ; Main supervisor: Arijit Khan) -->
         </ul>
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
