--- a/index.html
+++ b/index.html
@@ -223,57 +223,57 @@
 
 <li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
- <p><i>(<b>CORE A*, CCF A</b>) The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
+ <p>(<b>CORE A*, CCF A</b>) <i> The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
 </li>	
 	
 <li>Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, <b>Tianyi Li</b>, Yunjun Gao. <br/>
 <p>Spatio-Temporal Trajectory Similarity Measures: A Comprehensive Survey and Quantitative Study. </p>
- <p><i>(<b>JCR Q1, CCF A</b>) IEEE Transactions on Knowledge and Data Engineering</i> (<i><b>TKDE</b></i>), 2023.</p>
+ <p>(<b>JCR Q1, CCF A</b>) <i> IEEE Transactions on Knowledge and Data Engineering</i> (<i><b>TKDE</b></i>), 2023.</p>
 </li>	
 	
 <li>Jiaqi Wang, <b>Tianyi Li*</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
 <p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
- <p><i> (<b>CORE A*, CCF A</b>) The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
+ <p>(<b>CORE A*, CCF A</b>)<i>  The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
 </li>	
 	
 <li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao.<br/>
 <p>SimpleTS: An Efficient and Universal Model Selection Framework for Time Series Forecasting. </p>
- <p><i>(<b>CORE A*, CCF A</b>) The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 .</p>
+ <p>(<b>CORE A*, CCF A</b>)<i> The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 .</p>
 </li>	
 	
 <li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
 <p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
-<p><i>(<b>CORE A*, CCF A</b>) The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
+<p>(<b>CORE A*, CCF A</b>)<i> The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
 
 <li>Junyang Wu, <b>Tianyi Li*</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
 <p>SEA: A Scalable Entity Alignment System. </p>
-<p><i>(<b>CORE A*, CCF A</b>) The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
+<p>(<b>CORE A*, CCF A</b>)<i> The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
 <p>Evolutionary Clustering of Moving Objects. <b style="color:red">(Best Paper)</b></p>
-<p><i>(<b>CORE A*, CCF A</b>) The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
+<p>(<b>CORE A*, CCF A</b>)<i> The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
 </li>
 
 <li>Yunjun Gao, Xiaoze Liu, Jingxuan Wu, <b>Tianyi Li</b>, Pengfei Wang, Lu Chen.<br/>
 <p>ClusterEA: Scalable Entity Alignment with Stochastic Training and Normalized Mini-batch Similarities.</p>
-<p><i>(<b>CORE A*, CCF A</b>) The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022.</p>
+<p>(<b>CORE A*, CCF A</b>)<i> The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022.</p>
 </li>
 
 <li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>
                 <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>
-                <p><i>(<b>JCR Q1, CCF B</b>) IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 .</p>
+                <p>(<b>JCR Q1, CCF B</b>)<i> IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 .</p>
  </li>
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
-                <p><i>(<b>CORE A*, CCF A</b>) The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021. </p>
+                <p>(<b>CORE A*, CCF A</b>)<i> The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021. </p>
             </li>
 
             <li><b>Tianyi Li</b>, Ruikai Huang, Lu Chen, Christian S. Jensen, Torben Bach Pedersen.<br/>
                 <p>Compression of Uncertain Trajectories in Road Networks. <a href="http://www.vldb.org/pvldb/vol13/p1050-li.pdf"> [Paper]</a></p>
-                <p><i>(<b>CORE A*, CCF A</b>) The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020.</p>
+                <p>(<b>CORE A*, CCF A</b>)<i> The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020.</p>
             </li>
 
           <!--  <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>-->
