--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
-<p>Evolutionary Clustering of Moving Objects. <b style="color:red">(Best Paper)</b></p>
+<p> <b style="color:red">(Best Paper)</b> Evolutionary Clustering of Moving Objects.</p>
 <p>(<b>CORE A*, CCF A</b>)<i> The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
 </li>
 
@@ -319,7 +319,8 @@
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
             <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics. </li>
-            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks.</li>        
+            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks.</li>   
+	    <li>Zhongming Yao (Ph.D. candidate from Northeastern Univeristy, December 2023 to November 2024), Topic: Trajectory Data Management with Blockchain.</li>   
         </ul>
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
         <ul>
