--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
         <p>My primary research areas are Big Data Management and Database. Specifically, my current research interests are as follows: </p>
         <ul>
             <li>Spatio-temporal Data Management and Analytics</li>
+	    <li>Database</li>
             <li>Knowledge Graph</li>
             <li>Data Quality</li>
-            <li>AI Interaction with Database Technology</li>
+           
         
         </ul>
     </div>
@@ -219,12 +220,17 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
-	
+		
 
-<li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
-<p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
- <p>(<b>CORE A*, CCF A</b>) <i> The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
+<li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Jianzhong Qi, Chuanwen Li, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
+<p>LTPG: Large-Batch Transaction Processing on GPUs with Deterministic Concurrency Control. </p>
+ <p>(<b>CORE A*, CCF A</b>) <i> The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>ICDE</b></i>), 2024.</p>
 </li>	
+	
+<li>Jianpeng Wei, Yu Gu, Tianyi Li, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
+<p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
+ <p>(<b>CORE A*, CCF A</b>) <i> TThe 40th IEEE International Conference on Data Engineering</i> (<i><b>SIGMOD</b></i>), 2024.</p>
+</li>
 	
 <li>Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, <b>Tianyi Li</b>, Yunjun Gao. <br/>
 <p>Spatio-Temporal Trajectory Similarity Measures: A Comprehensive Survey and Quantitative Study. </p>
@@ -253,7 +259,7 @@
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
 <p> <b style="color:red">(Best Paper)</b> Evolutionary Clustering of Moving Objects.</p>
-<p>(<b>CORE A*, CCF A</b>)<i> The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
+<p>(<b>CORE A*, CCF A</b>)<i> The 38th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
 </li>
 
 <li>Yunjun Gao, Xiaoze Liu, Jingxuan Wu, <b>Tianyi Li</b>, Pengfei Wang, Lu Chen.<br/>
