--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
  <p>(<b>CORE A*, CCF A</b>) <i> The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
 </li>	
 	
-<li>Jianpeng Wei, Yu Gu, Tianyi Li, Jianzhong Qi, Chuanwen Li, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
+<li>Jianpeng Wei, Yu Gu, <b>Tianyi Li</b>, Jianzhong Qi, Chuanwen Li, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>LTPG: Large-Batch Transaction Processing on GPUs with Deterministic Concurrency Control. </p>
  <p>(<b>CORE A*, CCF A</b>) <i> The 40th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2024.</p>
 </li>
