--- a/index.html
+++ b/index.html
@@ -226,6 +226,16 @@
 <p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
  <p>(<b>CORE A*, CCF A</b>) <i> The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
 </li>	
+
+<li>Chenxu Wang, Xin Yang, <b>Tianyi Li</b>, Jiaxing Wei, Pinghui Wang,  Hongzhen Xian, Christian S. Jensen. <br/>
+<p>SWISP: Distributed Convoy Mining via Sliding Window-based Indexing and Sub-track Partitioning. </p>
+ <p>(<b>CORE A*, CCF A</b>) <i> The 40th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2024.</p>
+</li>
+	
+<li>Yuanyuan Yao, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Yunjun Gao, Shiting Wen. <br/>
+<p>TSec: An Efficient and Effective Framework for Time Series Classification </p>
+ <p>(<b>CORE A*, CCF A</b>) <i> The 40th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2024.</p>
+</li>
 	
 <li>Jianpeng Wei, Yu Gu, <b>Tianyi Li</b>, Jianzhong Qi, Chuanwen Li, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>LTPG: Large-Batch Transaction Processing on GPUs with Deterministic Concurrency Control. </p>
