--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   </ul>
 </div>
 <div class="docs-section" id="publications">
-  <h4>Publications</h4>
+  <h4>Selected publications</h4>
   <p>Full publications on <a href="https://scholar.google.com/citations?user=NeeHV-IAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> and <a href="https://dblp.org/pid/85/11154-5.html" target="_blank">DBLP</a>, and * denotes the corresponding author</p>
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#papers-2024">2024</div></li>
@@ -347,7 +347,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
 </div>
 
 <div class="docs-section" id="project">
-  <h4>Project</h4>
+  <h4>Projects</h4>
   {% assign current_projects = site.data.projects.projects %}
   {% for project in current_projects %}
   <div class="project">
