--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
 
 <!-- ========== Services ========== -->
 <div class="docs-section" id="services">
-  <h4>Services</h4>
+  <h4>Selected services</h4>
 
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#services-conferences">Conferences</div></li>
