--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@ title: Home
   <!-- <p style="line-height:1.4"> I am a tenure-track assistant professor with Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
 I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>, and <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>. 
-I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper.
+I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper.
 I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc.  </p> -->
   <p style="line-height:1.4">
-  I am a tenure-track assistant professor with Department of Computer Science, Aalborg University, Denmark. I am a faculty member in Center for Data-Intensive Systems (Daisy). I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank">ICDE 2022 Best Paper</a> (first author), NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper. I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIRECT).</p>
+  I am a tenure-track assistant professor with Department of Computer Science, Aalborg University, Denmark. I am a faculty member in Center for Data-Intensive Systems (Daisy). 
+    I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. 
+    I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank">ICDE 2022 Best Paper</a> (first author), NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper. 
+    I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIRECT).</p>
 
   <h4>Research Interests</h4>
   <p style="line-height: 50%;">My current research interests include: </p>
