--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   I am a tenure-track assistant professor with Department of Computer Science, Aalborg University, Denmark. I am a faculty member at the Center for Data-Intensive Systems (Daisy). 
     I received the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. 
    I was the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> ICDE 2022 Best Paper Award </a> (first author), NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper.
-    I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIRECT).</p>
+    I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIREC).</p>
 
   <h4>Research Interests</h4>
   <p style="line-height: 50%;">My current research interests include: </p>
