--- a/index.html
+++ b/index.html
@@ -68,6 +68,34 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
         </div>
       {% endfor %}
     </div>
+    
+    <!-- 2024 PAPERS -->
+    <div class="tab-pane active" id="papers-2024">
+      {% assign l2024_papers = site.data.publications.papers | where: "year2024", "y" %}
+      {% for paper in l2024_papers %}
+        <div class="paper">
+          <p class="title"><b>{{ paper.title }}</b>
+          {% if paper.paper_pdf %}
+              <a class="button" href="{{ paper.paper_pdf | prepend: site.baseurl }}" target="_blank">PDF</a>
+            {% endif %}
+            {% if paper.slides %}
+              <a class="button" href="{{ paper.slides | prepend: site.baseurl }}" target="_blank">Slides</a>
+            {% endif %}
+            {% if paper.poster %}
+              <a class="button" href="{{ paper.poster | prepend: site.baseurl }}" target="_blank">Poster</a>
+            {% endif %}
+            {% if paper.video %}
+              <a class="button" href="{{ paper.video }}" target="_blank">Video</a>
+            {% endif %}
+            {% if paper.code %}
+              <a class="button" href="{{ paper.code }}" target="_blank">Code</a>
+              {% endif %}
+          </p>
+          <p>{{ paper.authors }}</p>
+          <p><i>{{ paper.venue }}</i></p>
+        </div>
+      {% endfor %}
+    </div>
 
     <!-- 2023 PAPERS -->
     <div class="tab-pane" id="papers-2023">
