--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   <h4>Selected publications</h4>
   <p>Full publications on <a href="https://scholar.google.com/citations?user=NeeHV-IAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> and <a href="https://dblp.org/pid/85/11154-5.html" target="_blank">DBLP</a>, and * denotes the corresponding author</p>
   <ul class="tab-nav">
-    <li><div class="button active" data-ref="#papers-2024">2024</div></li>
+     <li><div class="button active" data-ref="#papers-2025">2025</div></li>
+    <li><div class="button" data-ref="#papers-2024">2024</div></li>
     <li><div class="button" data-ref="#papers-2023">2023</div></li>
     <li><div class="button" data-ref="#papers-2022">2022</div></li>
     <li><div class="button" data-ref="#papers-before2022">Before 2022</div></li>
