--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   <p style="line-height:1.4">
   I am a tenure-track assistant professor with Department of Computer Science, Aalborg University, Denmark. I am a faculty member at the Center for Data-Intensive Systems (Daisy). 
     I received the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. 
-   I am the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> 2022 IEEE International Conference on Data Engineering (ICDE) Best Paper Award</a>, 2023 International Conference on Cyber Energy Systems and Intelligent Energies (ICCSIE) Best Paper Award, and 2022 National Database Conference (NDBC) received One of the Best Papers Award.
+   I am the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> 2022 IEEE International Conference on Data Engineering (ICDE) Best Paper Award</a>, 2023 International Conference on Cyber Energy Systems and Intelligent Energies (ICCSIE) Best Paper Award, and 2022 National Database Conference (NDBC) One of the Best Papers Award.
     I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIREC).</p>
 
   <h4>Research Interests</h4>
