--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   <h4>Selected publications</h4>
   <p>Full publications on <a href="https://scholar.google.com/citations?user=NeeHV-IAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a> and <a href="https://dblp.org/pid/85/11154-5.html" target="_blank">DBLP</a>, and * denotes the corresponding author</p>
   <ul class="tab-nav">
-     <li><div class="button active" data-ref="#papers-2025">2025</div></li>
+    <li><div class="button active" data-ref="#papers-2025">2025</div></li>
     <li><div class="button" data-ref="#papers-2024">2024</div></li>
     <li><div class="button" data-ref="#papers-2023">2023</div></li>
     <li><div class="button" data-ref="#papers-2022">2022</div></li>
@@ -71,7 +71,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
     </div>
     
     <!-- 2024 PAPERS -->
-    <div class="tab-pane active" id="papers-2024">
+    <div class="tab-pane" id="papers-2024">
       {% assign l2024_papers = site.data.publications.papers | where: "year2024", "y" %}
       {% for paper in l2024_papers %}
         <div class="paper">
