--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ I have served on the Program Committees of top conferences including ICDE, KDD, 
   I am a tenure-track assistant professor with Department of Computer Science, Aalborg University, Denmark. I am a faculty member of <a href="https://www.cs.aau.dk/research/dess-data-engineering-science-and-systems/about-dess"> Data Engineering, Science and Systems (DESS) group</a>. 
     I received the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. 
    I am the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> 2022 IEEE International Conference on Data Engineering (ICDE) Best Paper Award</a> <b>(first author)</b>, 2024 IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>) <b>(corresponding author)</b>, 2023 International Conference on Cyber Energy Systems and Intelligent Energies (ICCSIE) Best Paper Award <b>(corresponding author)</b>, and 2022 National Database Conference (NDBC) One of the Best Papers Award.
-   I am the Associate Editor of IEEE Network Magazine. 
+   I am currently serving as an Associate Editor for IEEE Network Magazine.
     I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIREC).</p>
 
   <h4>Research Interests</h4>
