--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
   <b>One of the Best Papers Award</b>.
     </p>
   <p style="line-height:1.4">
-    I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles and IEEE Network Magazine.
+    I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles and IEEE Network.
     I am the project co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIREC).</p>
 
   <h4>Research Interests</h4>
