--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
 
 <!-- ========== VISITOR MAP ========== -->
 <div class="docs-section" id="visitors">
-  <h4>Visitor Statistics</h4> 
+  <h4>Access Records</h4> 
   <div class="tab-content">
     <!-- Map View -->
     <div class="tab-pane active" id="visitor-map">
