update: update map

--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
   <div class="tab-content">
     <!-- Map View -->
     <div class="tab-pane active" id="visitor-map">
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=z1oLjFXmwB3-cdb2T28B7e4zMcL5Ds5RlRa4aKfbHc4&cl=ffffff&w=a"></script>
+      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=z1oLjFXmwB3-cdb2T28B7e4zMcL5Ds5RlRa4aKfbHc4&cl=ffffff&w=a&n=false&t=n&n=false"></script>
     </div>
- </div>
+  </div>
 </div>
 
 <!-- ========== RESUME ========== -->
