--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
     I received the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="https://csj.cs.aau.dk" target="_blank">Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen" target="_blank">Prof. Lu Chen</a>, and <a href="https://homes.cs.aau.dk/~tbp/" target="_blank">Prof. Torben Bach Pedersen</a>. </p>
   <p style="line-height:1.4">
     I am the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> 2022 IEEE International Conference on Data Engineering (ICDE) <b> Best Paper Award</b> </a> <b>(first author)</b>, 2024 IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>) <b> Best Paper Award </b> <b>(corresponding author)</b>, 2023 International Conference on Cyber Energy Systems and Intelligent Energies (ICCSIE) <b> Best Paper Award </b> <b>(corresponding author)</b>, and 2022 National Database Conference (NDBC) </
-  <b>One of the Best Papers Award</b>.
+  <b>Best Student Paper Award</b>.
     </p>
   <p style="line-height:1.4">
     I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles and IEEE Network.
