--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <h4>About me</h4>
   <!-- <p style="line-height:1.4"> I am a tenure-track assistant professor with Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
-I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>, and <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>. 
+I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen"> and <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>. 
 I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper.
  I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles and IEEE Network Magazine.
   I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc.  </p> -->
