--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
   I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc.  </p> -->
   <p style="line-height:1.4">
   I am an associate professor (tenured) with Department of Computer Science, Aalborg University, Denmark. I am a faculty member of <a href="https://www.cs.aau.dk/research/dess-data-engineering-science-and-systems/about-dess"> Data Engineering, Science and Systems (DESS) group</a>. 
-    I received the Ph.D. degree from Aalborg University, Denmark, in 2022.
+    I received the Ph.D. degree from Aalborg University, Denmark, in 2022. From August 2022 to July 2025, I was an assistant professor with Department of Computer Science, Aalborg University, Denmark.
   <p style="line-height:1.4">
     I am the recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/" target="_blank"> 2022 IEEE International Conference on Data Engineering (ICDE) (CORE A*, CCF A) <b> Best Paper Award</b> </a> <b>(first author)</b>, 2024 IEEE Conference on Energy Internet and Energy System Integration (IEEE EI<sup>2</sup>) <b> Best Theoretical Paper Award </b> <b>(corresponding author)</b>, 2023 International Conference on Cyber Energy Systems and Intelligent Energies (ICCSIE) <b> Best Paper Award </b> <b>(corresponding author)</b>, and 2022 National Database Conference (NDBC) </
   <b>Best Student Paper Award</b>.
