--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ I was a recipient of <a href="https://icde2022.ieeecomputer.my/best-papers/">ICD
   <b>Best Student Paper Award</b>.
     </p>
   <p style="line-height:1.4">
-    I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles and IEEE Network.
+    I am currently serving as an Associate Editor for IEEE Transactions on Intelligent Vehicles, IEEE Transactions on Industrial Informatics, and IEEE Network.
     I am the co-investigator of Horizon European Framework Program (HORIZON) and Digital Research Centre Denmark Project (DIREC).</p>
 
   <h4>Research Interests</h4>
@@ -505,3 +505,4 @@ document.addEventListener('DOMContentLoaded', function() {
   });
 });
 </script>
+
